vm/snapshots/variables-array_components-multidimensional-jagged_triangle-JaggedTriangleOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged triangle test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged triangle test passed.
----- STDERR -----
