vm/snapshots/variables-array_components-multidimensional-loop_fill-LoopFillOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Loop fill test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Loop fill test passed.
----- STDERR -----
