vm/snapshots/variables-array_components-multidimensional-nested_access-NestedAccessOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Nested access test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Nested access test passed.
----- STDERR -----
