vm/snapshots/variables-array_components-multidimensional-object_2d-Object2dOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
2D object array test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
2D object array test passed.
----- STDERR -----
