vm/snapshots/variables-array_components-multidimensional-primitives_2d-Primitives2dOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
2D primitives array test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
2D primitives array test passed.
----- STDERR -----
