vm/snapshots/variables-array_components-multidimensional-rectangular-RectangularOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Rectangular arrays test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Rectangular arrays test passed.
----- STDERR -----
