vm/snapshots/variables-array_components-multidimensional-row_reassign-RowReassignOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Row reassignment test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Row reassignment test passed.
----- STDERR -----
