vm/snapshots/variables-array_components-null_array_access-NullArrayAccessErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException
	at variables.array_components.null_array_access.NullArrayAccessErrMain.main(NullArrayAccessErrMain.java:8)
