vm/snapshots/variables-array_components-primitive_arrays-PrimitiveArraysOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Primitive arrays test passed.
----- STDERR -----
