vm/snapshots/variables-array_components-reference_arrays-ReferenceArraysOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Reference arrays test passed.
----- STDERR -----
